--- a/templates/main/edit.html
+++ b/templates/main/edit.html
@@ -1,18 +1,18 @@
 {% extends 'base/base.html' %}
 
-{% block title %} Add TODO {% endblock title %}
+{% block title %} Edit TODO {% endblock title %}
 
 {% block content %}
 <div class="container">
-    <form method="POST" action="{% url 'add-todo' %}">
+    <form method="POST">
         {% csrf_token %}
         <div class="form-group">
           <label for="title">title</label>
-          <input type="text" class="form-control" id="title" name="title">
+          <input type="text" class="form-control" id="title" name="title" value="{{todo.title}}">
         </div>
         <div class="form-group">
           <label for="content">Content</label>
-          <input type="text" class="form-control" id="content" name="content">
+          <input type="text" class="form-control" id="content" name="content" value="{{todo.content}}">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form> 
